--- a/internal/workflows/buildsvc/sandbox/ktl-default.cfg
+++ b/internal/workflows/buildsvc/sandbox/ktl-default.cfg
@@ -33,14 +33,20 @@ rlimit_nproc_type: VALUE
 keep_env: true
 keep_caps: true
 
+# NOTE: Some nsjail builds ship with a restrictive default seccomp profile that
+# breaks Go binaries (thread creation) even when no policy is specified.
+# Explicitly default to ALLOW so ktl can execute reliably inside the jail.
+seccomp_string: "DEFAULT ALLOW"
+
 mount {
-	dst: "/proc"
-	fstype: "proc"
+	dst: "/"
+	fstype: "tmpfs"
+	rw: true
 }
 
 mount {
-	dst: "/sys"
-	fstype: "sysfs"
+	dst: "/proc"
+	fstype: "proc"
 }
 
 mount {
