--- a/testdata/sandbox/linux-ci.cfg
+++ b/testdata/sandbox/linux-ci.cfg
@@ -20,8 +20,9 @@ clone_newnet: false
 
 # 16 GiB virtual address space for concurrent builds
 rlimit_as: 16777216
-# No CPU cap; use cgroup quotas from the builder fleet
-rlimit_cpu: 0
+# rlimit_cpu=0 means "no CPU time allowed" (kills the process). Use a very high
+# ceiling instead; the builder fleet should enforce quotas via cgroups.
+rlimit_cpu: 86400
 # 2 GiB artifacts/logs
 rlimit_fsize: 2147483648
 rlimit_nofile: 131072
@@ -32,14 +33,19 @@ rlimit_nproc_type: VALUE
 keep_env: true
 keep_caps: true
 
+# NOTE: Some nsjail builds ship with a restrictive default seccomp profile that
+# breaks Go binaries (thread creation) even when no policy is specified.
+seccomp_string: "DEFAULT ALLOW"
+
 mount {
-    dst: "/proc"
-    fstype: "proc"
+    dst: "/"
+    fstype: "tmpfs"
+    rw: true
 }
 
 mount {
-    dst: "/sys"
-    fstype: "sysfs"
+    dst: "/proc"
+    fstype: "proc"
 }
 
 mount {
