--- a/testdata/sandbox/linux-strict.cfg
+++ b/testdata/sandbox/linux-strict.cfg
@@ -40,6 +40,16 @@ rlimit_nproc_type: VALUE
 # Hardened defaults.
 keep_caps: false
 
+# NOTE: Some nsjail builds ship with a restrictive default seccomp profile that
+# breaks Go binaries (thread creation) even when no policy is specified.
+seccomp_string: "DEFAULT ALLOW"
+
+mount {
+	dst: "/"
+	fstype: "tmpfs"
+	rw: true
+}
+
 mount {
 	dst: "/proc"
 	fstype: "proc"
