--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,22 @@ on:
   pull_request:
     branches: ["main", "dev"]
   workflow_dispatch:
+    inputs:
+      integration:
+        description: "Run tagged integration tests (docker/nsjail/kubeconfig guarded; may skip where deps are missing)"
+        required: false
+        type: boolean
+        default: false
+      charts_e2e:
+        description: "Run verify charts e2e (allowlist) via integration/verify_charts_e2e.sh"
+        required: false
+        type: boolean
+        default: false
+      e2e_real:
+        description: "Run real-cluster e2e (requires secrets KTL_E2E_KUBECONFIG_B64 and KTL_E2E_NAMESPACE)"
+        required: false
+        type: boolean
+        default: false
 
 jobs:
   lint:
@@ -25,17 +41,8 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
-      - name: gofmt (check)
-        run: |
-          set -euo pipefail
-          files=$(gofmt -l .)
-          if [ -n "$files" ]; then
-            echo "gofmt needed on:"
-            echo "$files"
-            exit 1
-          fi
-      - name: go vet
-        run: go vet ./...
+      - name: Testpoint (lint)
+        run: ./scripts/testpoint.sh --ci --no-unit --no-smoke
 
   test:
     runs-on: ubuntu-latest
@@ -58,13 +65,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
-      - name: Verify dependencies
-        run: go mod verify
-
       - name: Unit tests
         run: |
           set -euo pipefail
-          go test -json ./... > /tmp/go-test.json
+          ./scripts/testpoint.sh --ci --no-fmt --no-lint --json-out /tmp/go-test.json
           # On failure, upload the log
         shell: bash
       - name: Upload test log
@@ -74,12 +78,7 @@ jobs:
           name: go-test-json
           path: /tmp/go-test.json
 
-      - name: Smoke test package/verify
-        run: |
-          set -euo pipefail
-          out=/tmp/chart.sqlite
-          go run ./cmd/package --output "${out}" ./testdata/charts/drift-guard
-          go run ./cmd/package --verify "${out}"
+      # Smoke is covered by scripts/testpoint.sh.
 
   race:
     runs-on: ubuntu-latest
@@ -99,7 +98,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
       - name: Race tests (selected)
-        run: go test -race ./cmd/... ./internal/verify/...
+        run: ./scripts/testpoint.sh --ci --no-fmt --no-lint --no-unit --no-smoke --race-selected
 
   matrix-test:
     strategy:
@@ -122,10 +121,53 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
       - name: go test (matrix)
-        run: go test ./...
+        run: ./scripts/testpoint.sh --ci --matrix-safe
 
   all:
     runs-on: ubuntu-latest
     needs: [lint, test, race, matrix-test]
     steps:
       - run: echo "all checks passed"
+
+  manual-extras:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch' && (inputs.integration == 'true' || inputs.charts_e2e == 'true')
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '1.25.x'
+          cache: true
+      - name: Testpoint (manual extras)
+        shell: bash
+        run: |
+          set -euo pipefail
+          args=(--ci --no-fmt --no-lint)
+          if [[ "${{ inputs.integration }}" == "true" ]]; then
+            args+=(--integration)
+          fi
+          if [[ "${{ inputs.charts_e2e }}" == "true" ]]; then
+            args+=(--charts-e2e)
+          fi
+          ./scripts/testpoint.sh "${args[@]}"
+
+  e2e-real:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch' && inputs.e2e_real == 'true' && secrets.KTL_E2E_KUBECONFIG_B64 != '' && secrets.KTL_E2E_NAMESPACE != ''
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '1.25.x'
+          cache: true
+      - name: Decode kubeconfig
+        shell: bash
+        run: |
+          set -euo pipefail
+          echo "${{ secrets.KTL_E2E_KUBECONFIG_B64 }}" | base64 -d > /tmp/ktl-e2e-kubeconfig
+          chmod 600 /tmp/ktl-e2e-kubeconfig
+      - name: Testpoint (real-cluster e2e)
+        env:
+          KUBECONFIG: /tmp/ktl-e2e-kubeconfig
+          KTL_STACK_VERIFY_E2E_NAMESPACE: ${{ secrets.KTL_E2E_NAMESPACE }}
+        run: ./scripts/testpoint.sh --ci --no-fmt --no-lint --no-unit --no-smoke --e2e-real
