--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: '1.25.x'
+          go-version: '1.25.7'
           cache: true
       - name: Cache Go modules
         uses: actions/cache@v4
@@ -41,8 +41,43 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
+      - name: Install staticcheck
+        run: |
+          set -euo pipefail
+          go install honnef.co/go/tools/cmd/staticcheck@v0.6.1
       - name: Testpoint (lint)
         run: ./scripts/testpoint.sh --ci --no-unit --no-smoke
+
+  proto:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '1.25.7'
+          cache: true
+      - name: Proto lint
+        run: make proto-lint
+      - name: Proto generate (clean tree)
+        run: |
+          set -euo pipefail
+          make proto
+          git diff --exit-code
+
+  govulncheck:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '1.25.7'
+          cache: true
+      - name: Install govulncheck
+        run: |
+          set -euo pipefail
+          go install golang.org/x/vuln/cmd/govulncheck@v1.1.4
+      - name: govulncheck
+        run: govulncheck ./...
 
   test:
     runs-on: ubuntu-latest
@@ -53,7 +88,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.25.x'
+          go-version: '1.25.7'
           cache: true
       - name: Cache Go modules
         uses: actions/cache@v4
@@ -86,7 +121,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: '1.25.x'
+          go-version: '1.25.7'
           cache: true
       - name: Cache Go modules
         uses: actions/cache@v4
@@ -103,7 +138,7 @@ jobs:
   matrix-test:
     strategy:
       matrix:
-        go: ['1.24.x', '1.25.x']
+        go: ['1.24.x', '1.25.7']
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -125,7 +160,7 @@ jobs:
 
   all:
     runs-on: ubuntu-latest
-    needs: [lint, test, race, matrix-test]
+    needs: [lint, proto, govulncheck, test, race, matrix-test]
     steps:
       - run: echo "all checks passed"
 
@@ -136,7 +171,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: '1.25.x'
+          go-version: '1.25.7'
           cache: true
       - name: Testpoint (manual extras)
         shell: bash
@@ -158,7 +193,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: '1.25.x'
+          go-version: '1.25.7'
           cache: true
       - name: Validate e2e secrets
         shell: bash
