--- a/testdata/charts/drift-guard/templates/configmap.yaml
+++ b/testdata/charts/drift-guard/templates/configmap.yaml
@@ -2,5 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}-cm
+  labels:
+    app.kubernetes.io/managed-by: Helm
+  annotations:
+    meta.helm.sh/release-name: {{ .Release.Name }}
+    meta.helm.sh/release-namespace: {{ .Release.Namespace }}
 data:
   value: {{ .Values.data.value | quote }}
