--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,10 +4,14 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
-    open-pull-requests-limit: 10
+    # Keep Dependabot enabled for visibility, but prevent it from opening PRs
+    # (and thus creating update branches) in this repo.
+    open-pull-requests-limit: 0
 
   - package-ecosystem: "gomod"
     directory: "/"
     schedule:
       interval: "weekly"
-    open-pull-requests-limit: 10
+    # Keep Dependabot enabled for visibility, but prevent it from opening PRs
+    # (and thus creating update branches) in this repo.
+    open-pull-requests-limit: 0
