--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -1,9 +1,8 @@
 name: Publish GHCR image
 
 on:
-  push:
-    tags:
-      - "v*"
+  # Disabled by default to avoid automatically creating GHCR package versions.
+  # Run manually when publishing container images is desired.
   workflow_dispatch: {}
 
 jobs:
